[package]
name = "mc-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valence = { git = "https://github.com/valence-rs/valence.git" }
serde = { version = "1.0.145", features = ["derive", "rc"] }
serde_json = "1.0.85"
serde_path_to_error = "0.1.10"
eyre = "0.6.8"
