[package]
name = "valence_worldgen"
authors = ["bits0rcerer"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
valence_protocol = { path = "../valence_protocol" }
serde = { version = "1.0.145", features = ["derive", "rc"] }
serde_json = "1.0.85"
serde_path_to_error = "0.1.10"
eyre = "0.6.8"
md5 = "0.7.0"

[dev-dependencies]
csv = "1.2.1"
rayon = "1.7.0"
